# local-ai-stack

./: .env.example  .gitattributes  .gitignore  README.md  audio-api.env.example  backup-nextcloud.sh  docker-compose.ai.yml  docker-compose.server.yml  docker-compose.yml  img.sh  librechat-render.js  librechat.yaml  llama-swap.yaml  mcp-proxy-config.json  oss-watcher.env.example  plc-watcher.env.example  receipt-watcher.env.example  rss-watcher.env.example  searxng-settings.yml  serve-qwen-27b.sh  serve-qwen-35b-a3b.sh  serve-qwen-coder-7b.sh  serve-qwen-coder.sh  serve-reranker.sh  serve-sdcpp.sh  signal-bot.Dockerfile  signal-bot.env.example  start-ai.sh  start-server.sh  start.sh  tg-watcher.env.example  vllm-launcher-35b-a3b.sh  vllm-launcher-coder.sh  vllm-launcher.sh
audio-api/: Dockerfile  entrypoint.sh  requirements.txt
caddy/: Caddyfile.ai  Caddyfile.server
calendar-watcher/: Dockerfile  pyproject.toml
calendar-watcher/calendar_watcher/: classifier.py  config.py  main.py  meal_enricher.py  poller.py  signal_client.py  state.py  travel_enricher.py
image-gen/: Backends.fds  Dockerfile  entrypoint.sh
image-gen-ui/: Dockerfile  nginx.conf
llm-kb-template/: CLAUDE.md  GUIDE.md
location-tracker/: Dockerfile  README.md  pyproject.toml
location-tracker/location_tracker/: caldav_fetch.py  config.py  mcp_server.py  parser.py  poller.py  state.py  timeline.py
mcp-proxy/: Dockerfile  gh-read-server.py  gmaps-searchtext-shim.py
meal-watcher/: Dockerfile  README.md  pyproject.toml
memory-mcp/: Dockerfile  requirements.txt
oss-watcher/: Dockerfile  pyproject.toml
oss-watcher/oss_watcher/: config.py  discord_client.py  github_client.py  main.py  signal_client.py  summarizer.py
pdf-inspector/: Dockerfile  server.py
plc-watcher/: Dockerfile  pyproject.toml
receipt-watcher/: .gitignore  Dockerfile  README.md  accounts.yaml.example  pyproject.toml  vendors.yaml.example
receipt-watcher/receipt_watcher/: audit.py  config.py  extract.py  main.py  notify.py  poller.py  sheets.py  state.py  vendor_match.py
receipt-watcher/receipt_watcher/backends/: __init__.py  base.py  imap.py
receipt-watcher/secrets/: README.txt
reverse-image-search/: Dockerfile  server.py
rss-watcher/: Dockerfile  pyproject.toml
rss-watcher/rss_watcher/: briefer.py  config.py  fetcher.py  main.py
scripts/: backup-nextcloud.sh  dns-sync.sh  nextcloud-backup.cron  restore-nextcloud.sh  setup-caddy.sh  setup-ytdlp.sh
shared/: pyproject.toml
tg-watcher/: Dockerfile  auth.py  pyproject.toml
tg-watcher/tg_watcher/: config.py  db.py  fetcher.py  listener.py  main.py  signal_client.py  summarizer.py
(+112 files in other folders)
