[project]
name = "calendar-watcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "stack-shared",
    "fastmcp>=2.3.4",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "starlette>=0.41.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
stack-shared = { path = "../shared", editable = true }
