[project]
name = "location-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "caldav>=1.3.1",
    "fastmcp>=2.3.4",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "recurring-ical-events>=3.1.0",
    "icalendar>=5.0.0",
    "starlette>=0.41.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
