[project]
name = "oss-watcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "stack-shared",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
oss-watcher = "oss_watcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
stack-shared = { path = "../shared", editable = true }
