[project]
name = "rss-watcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "stack-shared",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
stack-shared = { path = "../shared", editable = true }
