[project]
name = "tg-watcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "stack-shared",
    "telethon>=1.36.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
stack-shared = { path = "../shared", editable = true }
